--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Social",
+  "name": "OvaTalk",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,6 +18,8 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-image-picker": "^4.7.3",
+    "react-native-modal": "^13.0.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
