--- a/package.json
+++ b/package.json
@@ -10,22 +10,42 @@
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=19001'"
   },
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/plugin-transform-arrow-functions": "^7.16.7",
+    "@babel/plugin-transform-shorthand-properties": "^7.16.7",
+    "@babel/plugin-transform-template-literals": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@fawazahmed/react-native-read-more": "^2.3.2",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/netinfo": "^8.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
+    "react-moment": "^1.1.1",
     "react-native": "0.67.1",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.3",
+    "react-native-image-slider-box": "^1.1.17",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
+    "react-native-reanimated": "^2.4.1",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-skeleton-content-nonexpo": "^1.0.13",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
-    "scrcpy": "^1.1.6"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.16.12",
@@ -38,7 +58,7 @@
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
+    "metro-react-native-babel-preset": "^0.68.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.5.5"
